[KIECLOUD-376] add generated section to KieApp status
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.8.0/common.yaml
+++ b/config/7.8.0/common.yaml
@@ -446,6 +446,7 @@ smartRouter:
                   - name: KIE_SERVER_ROUTER_HOST
                     valueFrom:
                       fieldRef:
+                        apiVersion: v1
                         fieldPath: status.podIP
                   - name: KIE_SERVER_ROUTER_PORT
                     value: "9000"
@@ -618,10 +619,12 @@ servers:
                     - name: KIE_SERVER_HOST
                       valueFrom:
                         fieldRef:
+                          apiVersion: v1
                           fieldPath: status.podIP
                     - name: KIE_SERVER_ID
                       valueFrom:
                         fieldRef:
+                          apiVersion: v1
                           fieldPath: metadata.labels['services.server.kie.org/kie-server-id']
                     - name: KIE_SERVER_ROUTE_NAME
                       value: "[[.KieName]]"
